InsuranceOrg/force-app/main/default/objects/vlocity_ins__PolicyPartyRelationship__c/vlocity_ins__PolicyPartyRelationship__c.object-meta.xml
<CustomObject>
    <description>DEPRECATED. Replaced by Held Product Relationship (AssetPartyRelationship__c). Relationships to parties with a role on a policy. For example, policyholder, beneficiary or producer.</description>
    <label>Policy Relationship</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>