InsuranceOrg/force-app/main/default/objects/vlocity_ins__PolicyPartyRelationship__c/fields/vlocity_ins__CommissionPercentage__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__CommissionPercentage__c</fullName>
    <description>For producer relationships, the percentage of the commission that will be paid to this producer.</description>
    <label>Commission Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>