InsuranceOrg/force-app/main/default/objects/vlocity_ins__PolicyPartyRelationship__c/fields/vlocity_ins__Party__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Party__c</fullName>
    <description>Formula: a hyperlink to the detail page for the related party based on the type of party.</description>
    <formula>IF( ISBLANK(vlocity_ins__PartyId__r.vlocity_ins__AccountId__r.Id), HYPERLINK(&quot;/&quot; &amp; vlocity_ins__PartyId__r.vlocity_ins__ContactId__r.Id, vlocity_ins__PartyId__r.Name  , &quot;_parent&quot;), HYPERLINK(&quot;/&quot; &amp; vlocity_ins__PartyId__r.vlocity_ins__AccountId__r.Id, vlocity_ins__PartyId__r.Name , &quot;_parent&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Party</label>
    <type>Text</type>
</CustomField>