InsuranceOrg/force-app/main/default/objects/vlocity_ins__PolicyPartyRelationship__c/fields/vlocity_ins__PartyId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PartyId__c</fullName>
    <description>The Id of the related party.</description>
    <label>Party</label>
    <referenceTo>vlocity_ins__Party__c</referenceTo>
    <relationshipLabel>Policy Relationships</relationshipLabel>
    <relationshipName>PoliciesClientsRel1</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>