InsuranceOrg/force-app/main/default/objects/vlocity_ins__PolicyPartyRelationship__c/fields/vlocity_ins__PartyRelationshipType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PartyRelationshipType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The relationship type, or role, for this relationship.</description>
    <label>Relationship Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>vlocity_ins__PartyRelationshipType__c.vlocity_ins__SourcePartyType__c</field>
            <operation>equals</operation>
            <value/>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>vlocity_ins__PartyRelationshipType__c</referenceTo>
    <relationshipLabel>Policy Relationships</relationshipLabel>
    <relationshipName>PolicyRelationships</relationshipName>
    <type>Lookup</type>
</CustomField>