InsuranceOrg/force-app/main/default/objects/vlocity_ins__PolicyPartyRelationship__c/fields/vlocity_ins__Percentage__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Percentage__c</fullName>
    <description>A percentage for this relationship. However, use Beneficiary Percentage on beneficiary relationships and Commission Percentage on producer relationships.</description>
    <label>Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>