InsuranceOrg/force-app/main/default/objects/vlocity_ins__PolicyPartyRelationship__c/fields/vlocity_ins__PolicyHolderId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PolicyHolderId__c</fullName>
    <formula>CASESAFEID(vlocity_ins__PolicyId__r.vlocity_ins__AccountId__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Holder</label>
    <type>Text</type>
</CustomField>