InsuranceOrg/force-app/main/default/objects/vlocity_ins__PolicyPartyRelationship__c/fields/vlocity_ins__PolicyNumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PolicyNumber__c</fullName>
    <formula>vlocity_ins__PolicyId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Number</label>
    <type>Text</type>
</CustomField>