InsuranceOrg/force-app/main/default/objects/vlocity_ins__PolicyPartyRelationship__c/fields/vlocity_ins__PolicyType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PolicyType__c</fullName>
    <formula>Text(vlocity_ins__PolicyId__r.vlocity_ins__PolicyType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Type</label>
    <type>Text</type>
</CustomField>