InsuranceOrg/force-app/main/default/objects/vlocity_ins__PolicyPartyRelationship__c/fields/vlocity_ins__RelatedParty__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__RelatedParty__c</fullName>
    <formula>vlocity_ins__PartyId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Party</label>
    <type>Text</type>
</CustomField>