InsuranceOrg/force-app/main/default/objects/vlocity_ins__PolicyPartyRelationship__c/fields/vlocity_ins__Role__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Role__c</fullName>
    <formula>vlocity_ins__PartyRelationshipType__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role</label>
    <type>Text</type>
</CustomField>